<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".KlijentPaket.PrijaviProblemFragment"
    tools:layout_editor_absoluteY="25dp">


    <EditText
        android:id="@+id/editNazivProblema"
        style="@style/CustomEditText"

        android:hint="@string/naziv_problema"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.733"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <EditText
        android:id="@+id/editAdresa"
        style="@style/CustomEditText"
        android:hint="@string/Adresa"
        android:inputType="textPostalAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.099" />

    <EditText
        android:id="@+id/editOpis"
        style="@style/CustomEditText"
        android:hint="@string/opis_problema"
        android:inputType="textMultiLine"
        android:maxLines="5"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarFadeDuration="1000"
        android:verticalScrollbarPosition="right"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vrstaOpreme"
         />


    <TextView
        android:id="@+id/tipProblemaLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip_problema_label"
        app:layout_constraintBottom_toBottomOf="@id/radioGroup"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/radioGroup"
        app:layout_constraintVertical_bias="0.5" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.595"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.281">

        <RadioButton
            android:id="@+id/radioSoftverski"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/softverski" />

        <RadioButton
            android:id="@+id/radioHardverski"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/hardverski" />

    </RadioGroup>

    <Spinner
        android:backgroundTint="@color/NarandzastiSvetliji"
        android:background="@color/PopBoja"
        android:id="@+id/vrstaOpreme"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/txtUredjajLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uredjaj"
        app:layout_constraintBottom_toBottomOf="@id/vrstaOpreme"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/tipProblemaLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/vrstaOpreme"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btnPrijaviProblem"
        style="@style/CustomFilledButton"

        android:text="@string/prijavi_problem"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.929" />


</android.support.constraint.ConstraintLayout>