<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ChangeEmailActivity"
    tools:layout_editor_absoluteY="25dp">

    <EditText
        android:id="@+id/editPassEmail"
        style="@style/NasEditText"
        android:hint="@string/pass_Email"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026" />

    <EditText
        android:id="@+id/editChangeEmail"
        style="@style/NasEditText"
        android:hint="@string/novi_Email"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/editPassEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnSubmitChangeEmail"
        style="@style/EntryButton"
        android:layout_marginTop="20dp"
        android:text="@string/promeni_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editChangeEmail" />

</android.support.constraint.ConstraintLayout>